--- a/portlets/contacts-portlet/docroot/WEB-INF/src/content/Language_ru.properties
+++ b/portlets/contacts-portlet/docroot/WEB-INF/src/content/Language_ru.properties
@@ -1,5 +1,5 @@
 add-projects=Добавить проекты
-administrators=Administrators (Automatic Copy)
+administrators=Администраторы
 are-you-sure-you-want-to-delete-x-from-your-contacts=Вы уверены, что хотите удалить {0} из ваших контактов?
 back-to-selection=Обратно к выбору
 blocked=Заблокирован
@@ -7,7 +7,7 @@ connect=Добавить в контакты
 connected=Добавлен
 connection-requested=Запрос на добавление контакта
 connections=Контакты
-contacts-center=Центh контактов
+contacts-center=Центр контактов
 contacts-center-allows-you-to-search-view-and-establish-social-relations-with-other-users=Центр контактов позволяет вам искать, смотреть и добавлять социальные связи с другими пользователями. Следите или добавляйте пользователя как контакт, чтобы видеть их деятельность и микроблоги.
 disconnect=Удалить из контактов
 email-address-cannot-be-empty=Адрес email не может быть пустым.
@@ -22,16 +22,16 @@ following=Следит
 full-name-cannot-be-empty=Полное имя не может быть пустым.
 information=Информация
 introduction=Введение
-javax.portlet.title.1_WAR_contactsportlet=Contacts Center (Automatic Copy)
-javax.portlet.title.2_WAR_contactsportlet=Profile (Automatic Copy)
-javax.portlet.title.3_WAR_contactsportlet=My Contacts (Automatic Copy)
-javax.portlet.title.4_WAR_contactsportlet=Members (Automatic Copy)
+javax.portlet.title.1_WAR_contactsportlet=Центр Контактов
+javax.portlet.title.2_WAR_contactsportlet=Профиль
+javax.portlet.title.3_WAR_contactsportlet=Мои Контакты
+javax.portlet.title.4_WAR_contactsportlet=Участники
 members-of=Участники
 my-connections=Мои связи
 my-contacts=Мои контакты
 no-last-name=Нет фамилии
 people=Люди
-receive-a-notification-when-someone-sends-you-a-social-relationship-request=sends you a social relationship request. (Automatic Copy)
+receive-a-notification-when-someone-sends-you-a-social-relationship-request=послал вам запрос на
 recent-activity=Последняя деятельность
 request-social-networking-summary-add-connection={0} хочет добавить вас как связь.
 requests=Запросы
@@ -45,41 +45,41 @@ show-instant-messenger=Показать программу обмена сооб
 show-phones=Показать телефоны
 show-recent-activity=Показать последнюю деятельность
 show-sites=Показать сайты
-show-sms=Show SMS (Automatic Copy)
-show-social-network=Show Social Network (Automatic Copy)
-show-users-information=Show User's Information (Automatic Copy)
-show-websites=Show Websites (Automatic Copy)
-there-is-already-a-contact-with-this-email-address=There is already a contact with this email address. (Automatic Copy)
-this-user-has-received-a-connection-request-from-you=This user has received a connection request from you. (Automatic Copy)
-to-complete-your-profile-please-add=To complete your profile, please add: (Automatic Copy)
-unblock=Unblock (Automatic Copy)
-unfollow=Unfollow (Automatic Copy)
-update-contact=Update Contact (Automatic Copy)
-users-per-section=Users per Section (Automatic Copy)
-vcard=vCard (Automatic Copy)
-view-all-x-connections=View all {0}'s connections. (Automatic Copy)
-view-all-x-users=View all {0} users. (Automatic Copy)
-view-my-x-contacts=View my {0} contacts. (Automatic Copy)
-view-profile=View Profile (Automatic Copy)
-x-does-not-belong-to-any-sites={0} does not belong to any sites. (Automatic Copy)
-x-does-not-have-any-tags={0} does not have any tags. (Automatic Copy)
-x-has-no-connections={0} has no connections. (Automatic Copy)
-x-has-no-contacts={0} has no contacts. (Automatic Copy)
-x-has-x-connections={0} has {1} connections. (Automatic Copy)
-you-are-following-x-people=You are following {0} people. (Automatic Copy)
-you-are-following-x-people-in-this-site=You are following {0} people in this site. (Automatic Copy)
-you-are-not-connected-to-this-user-anymore=You are not connected to this user anymore. (Automatic Copy)
-you-are-not-following-this-user-anymore=You are not following this user anymore. (Automatic Copy)
-you-are-now-connected-to-this-user=You are now connected to this user. (Automatic Copy)
-you-are-now-following-this-user=You are now following this user. (Automatic Copy)
-you-have-a-pending-request=You have a pending request. (Automatic Copy)
-you-have-blocked-this-user=You have blocked this user. (Automatic Copy)
-you-have-no-connections=You have no connections. (Automatic Copy)
-you-have-no-pending-requests=You have no pending request. (Automatic Copy)
-you-have-successfully-added-a-new-contact=You have successfully added a new contact. (Automatic Copy)
-you-have-successfully-updated-the-contact=You have successfully updated the contact. (Automatic Copy)
-you-have-unblocked-this-user=You have unblocked this user. (Automatic Copy)
-you-have-x-connections=You have {0} connections. (Automatic Copy)
-you-have-x-connections-in-this-site=You have {0} connections in this site. (Automatic Copy)
-you-have-x-followers=You have {0} followers. (Automatic Copy)
-you-have-x-pending-requests=You have {0} pending requests. (Automatic Copy)
+show-sms=Показать СМС
+show-social-network=Показать Социальные Сети
+show-users-information=Показать Пользовательскую Информацию
+show-websites=Показать Веб-Сайты
+there-is-already-a-contact-with-this-email-address=Уже есть контакт с таким email
+this-user-has-received-a-connection-request-from-you=Этот пользователь получил запрос от вас
+to-complete-your-profile-please-add=Чтобы закончить ваш профиль пожалуйста добавьте:
+unblock=Разблокировать
+unfollow=Не следить
+update-contact=Обновить Контакт
+users-per-section=Пользователей в Секции
+vcard=vCard
+view-all-x-connections=Просмотреть все связи {0}.
+view-all-x-users=Просмотреть всех {0} пользователей.
+view-my-x-contacts=Просмотреть {0}  моих контактов.
+view-profile=Посмотреть Профиль
+x-does-not-belong-to-any-sites={0} не относится ни к одному из сайтов.
+x-does-not-have-any-tags={0} не имеет ни одного тега.
+x-has-no-connections={0} не имеет связей.
+x-has-no-contacts={0} не имеет контактов.
+x-has-x-connections={0} имеет {1} связей.
+you-are-following-x-people=Вы следите за {0} пользоателями.
+you-are-following-x-people-in-this-site=Вы следите за {0} пользователями на этом сайте.
+you-are-not-connected-to-this-user-anymore=Вы больше не связаны с этим пользователем.
+you-are-not-following-this-user-anymore=Вы больше не следите за этим пользователем.
+you-are-now-connected-to-this-user=Теперь вы связаны с этим пользователем.
+you-are-now-following-this-user=Теперь вы следите за этим пользователем.
+you-have-a-pending-request=У вас есть запросы требующие внимания.
+you-have-blocked-this-user=Вы заблокировали этого пользователя.
+you-have-no-connections=У вас нет связей.
+you-have-no-pending-requests=У вас нет запросов.
+you-have-successfully-added-a-new-contact=Вы успешно добавили новый контакт.
+you-have-successfully-updated-the-contact=Вы успешно обновили контакт.
+you-have-unblocked-this-user=Вы разблокировали пользователя.
+you-have-x-connections=У вас {0} связей.
+you-have-x-connections-in-this-site=У вас {0} связей на этом сайте.
+you-have-x-followers=У вас {0} последователей.
+you-have-x-pending-requests=У вас {0} запросов требующих внимания.
