--- a/hooks/so-activities-hook/docroot/WEB-INF/src/content/Language_ru.properties
+++ b/hooks/so-activities-hook/docroot/WEB-INF/src/content/Language_ru.properties
@@ -1,84 +1,84 @@
-20-percent-complete=20% Complete (Automatic Copy)
-40-percent-complete=40% Complete (Automatic Copy)
-60-percent-complete=60% Complete (Automatic Copy)
-80-percent-complete=80% Complete (Automatic Copy)
-about-a-minute-ago=About a minute ago. (Automatic Copy)
-about-an-hour-ago=About an hour ago. (Automatic Copy)
-added-a-new-bookmark=Added a new <em>bookmark</em>. (Automatic Copy)
-added-a-new-calendar-event=Added a new <em>calendar event</em>. (Automatic Copy)
-added-an-attachment-x-to-a-wiki-page=Added an attachment, {1} to a <em>wiki page</em>. (Automatic Copy)
-added-an-attachment-x-to-a-wiki-page-in-the-x-wiki=Added an attachment, {1} to a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-added-x-attachments-to-a-wiki-page=Added {0} attachments to a <em>wiki page</em>. (Automatic Copy)
-added-x-attachments-to-a-wiki-page-in-the-x-wiki=Added {0} attachments to a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-added-x-new-bookmarks=Added {0} new <em>bookmarks</em>. (Automatic Copy)
-added-x-new-calendar-events=Added {0} new <em>calendar events</em>. (Automatic Copy)
-commented-on-a-blog-entry=Commented on a <em>blog entry</em>. (Automatic Copy)
-commented-on-a-microblog-entry=Commented on a <em>microblog entry</em>. (Automatic Copy)
-commented-on-a-wiki-page=Commented on a <em>wiki page</em>. (Automatic Copy)
-commented-on-a-wiki-page-in-the-x-wiki=Commented on a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-commented-on-x-forum-post=Commented on {0}'s <em>forum post</em>. (Automatic Copy)
-commented-on-x-forum-post-in-x=Commented on {0}'s <em>forum post</em> in {1}. (Automatic Copy)
-created-a-new-task=Created a new <em>task</em>. (Automatic Copy)
-created-a-new-task-for=Created a new <em>task</em> for {0}. (Automatic Copy)
-created-a-new-wiki-page=Created a new <em>wiki page</em>. (Automatic Copy)
-created-a-new-wiki-page-in-the-x-wiki=Created a new <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-created-x-new-tasks=Created {0} new <em>tasks</em>. (Automatic Copy)
-created-x-new-wiki-pages=Created {0} new <em>wiki pages</em>. (Automatic Copy)
-created-x-new-wiki-pages-in-the-x-wiki=Created {0} new <em>wiki pages</em> in the {1} wiki. (Automatic Copy)
-due=Due (Automatic Copy)
-made-x-updates-to-a-blog-entry=Made {0} updates to a <em>blog entry</em>. (Automatic Copy)
-made-x-updates-to-a-bookmark=Made {0} updates to a <em>bookmark</em>. (Automatic Copy)
-made-x-updates-to-a-calendar-event=Made {0} updates to a <em>calendar event</em>. (Automatic Copy)
-made-x-updates-to-a-document=Made {0} updates to a <em>document</em>. (Automatic Copy)
-made-x-updates-to-a-document-in-the-x-folder=Made {0} updates to a <em>documents</em> in the {1} folder. (Automatic Copy)
-made-x-updates-to-a-task=Made {0} updates to a <em>task</em>. (Automatic Copy)
-made-x-updates-to-a-wiki-page=Made {0} updates to a <em>wiki page</em>. (Automatic Copy)
-made-x-updates-to-a-wiki-page-in-the-x-wiki=Made {0} updates to a <em>wiki page</em> in the {1} wiki. (Automatic Copy)
-never-due=Never Due (Automatic Copy)
-open=Open (Automatic Copy)
-removed-an-attachment-x-from-a-wiki-page=Removed an attachment, {1} from a <em>wiki page</em>. (Automatic Copy)
-removed-an-attachment-x-from-a-wiki-page-in-the-x-wiki=Removed an attachment, {1} from a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-removed-x-attachments-from-a-wiki-page=Removed {0} attachments from a <em>wiki page</em>. (Automatic Copy)
-removed-x-attachments-from-a-wiki-page-in-the-x-wiki=Removed {0} attachments from a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-reopened=Reopened (Automatic Copy)
-reopened-a-task=Reopened a <em>task</em>. (Automatic Copy)
-reopened-a-task-for=Reopened a <em>task</em> for {0}. (Automatic Copy)
-reopened-x-tasks=Reopened {0} <em>tasks</em>. (Automatic Copy)
-replied-to-x-forum-post=Replied to {0}'s <em>forum post</em>. (Automatic Copy)
-replied-to-x-forum-post-in-x=Replied to {0}'s <em>forum post</em> in {1}. (Automatic Copy)
-reposted-a-microblog-entry-from-x=Reposted a <em>microblog entry</em> from {0}. (Automatic Copy)
-reposted-from=Reposted from (Automatic Copy)
-resolved=Resolved (Automatic Copy)
-resolved-a-task=Resolved a <em>task</em>. (Automatic Copy)
-resolved-a-task-for=Resolved a <em>task</em> for {0}. (Automatic Copy)
-resolved-x-tasks=Resolved {0} <em>tasks</em>. (Automatic Copy)
-restored-an-attachment-x-to-a-wiki-page=Restored an attachment, {1} to a <em>wiki page</em>. (Automatic Copy)
-restored-an-attachment-x-to-a-wiki-page-in-the-x-wiki=Restored an attachment, {1} to a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-restored-x-attachments-from-a-wiki-page=Restored {0} attachments to a <em>wiki page</em>. (Automatic Copy)
-restored-x-attachments-from-a-wiki-page-in-the-x-wiki=Restored {0} attachments to a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-updated-a-blog-entry=Updated a <em>blog entry</em>. (Automatic Copy)
-updated-a-bookmark=Updated a <em>bookmark</em>. (Automatic Copy)
-updated-a-calendar-event=Updated a <em>calendar event</em>. (Automatic Copy)
-updated-a-document=Updated a <em>document</em>. (Automatic Copy)
-updated-a-document-in-the-x-folder=Updated a <em>document</em> in the {0} folder. (Automatic Copy)
-updated-a-task=Updated a <em>task</em>. (Automatic Copy)
-updated-a-task-for=Updated a <em>task</em> for {0}. (Automatic Copy)
-updated-a-wiki-page=Updated a <em>wiki page</em>. (Automatic Copy)
-updated-a-wiki-page-in-the-x-wiki=Updated a <em>wiki page</em> in the {0} wiki. (Automatic Copy)
-uploaded-a-new-document=Uploaded a new <em>document</em>. (Automatic Copy)
-uploaded-a-new-document-in-the-x-folder=Uploaded a new <em>document</em> in the {0} folder. (Automatic Copy)
-uploaded-x-new-documents=Uploaded {0} new <em>documents</em>. (Automatic Copy)
-view-changes=View Changes (Automatic Copy)
-view-microblogs=View Microblogs (Automatic Copy)
-wrote-a-new-blog-entry=Wrote a new <em>blog entry</em>. (Automatic Copy)
-wrote-a-new-forum-post=Wrote a new <em>forum post</em>. (Automatic Copy)
-wrote-a-new-forum-post-in-x=Wrote a new <em>forum post</em> in {0}. (Automatic Copy)
-wrote-x-new-blog-entries=Wrote {0} new <em>blog entries</em>. (Automatic Copy)
-wrote-x-new-forum-posts=Wrote {0} new <em>forum posts</em>. (Automatic Copy)
-x-and-x-others={0} and {1} others. (Automatic Copy)
-x-and-x-others-in-x={0} and {1} others in {2}. (Automatic Copy)
-x-hours-ago={0} hours ago. (Automatic Copy)
-x-minutes-ago={0} minutes ago. (Automatic Copy)
-x-replied-to-x-post={0} replied to {1}'s post. (Automatic Copy)
-x-reposted-from-x={0} reposted from {1}. (Automatic Copy)
-yesterday-at-x=Yesterday at {0}. (Automatic Copy)
+20-percent-complete=Выполнено 20%
+40-percent-complete=Выполнено 40%
+60-percent-complete=Выполнено 60%
+80-percent-complete=Выполнено 80%
+about-a-minute-ago=Примерно минуту назад.
+about-an-hour-ago=Примерно час назад.
+added-a-new-bookmark=Добавлена новая <em>закладка</em>.
+added-a-new-calendar-event=Добавлено новое <em>событие</em>.
+added-an-attachment-x-to-a-wiki-page=К <em>вики-странице</em> добавлено новое вложение {1}.
+added-an-attachment-x-to-a-wiki-page-in-the-x-wiki=К <em>вики-странице</em> в вики {0} добавлено новое вложение {1}.
+added-x-attachments-to-a-wiki-page=К <em>вики-странице</em> добавлено {0} вложений.
+added-x-attachments-to-a-wiki-page-in-the-x-wiki=К <em>вики-странице</em> в вики {0} добавлено {0} вложений.
+added-x-new-bookmarks=Добавлено {0} новых <em>закладок</em>.
+added-x-new-calendar-events=Добавлено {0} новых <em>событий</em>.
+commented-on-a-blog-entry=Комментировал(а) в <em>записи блока</em>.
+commented-on-a-microblog-entry=Комментировал(а) в <em>записи микроблога</em>.
+commented-on-a-wiki-page=Комментировал(а) на <em>вики-странице</em>.
+commented-on-a-wiki-page-in-the-x-wiki=Комментировал(а) на <em>киви-странице</em> в вики {0}.
+commented-on-x-forum-post=Комментировал(а) в <em>сообщении форума</em> {0}.
+commented-on-x-forum-post-in-x=Комментировал(а) <em>сообщении форума</em> {0} в {1}.
+created-a-new-task=Создана новая <em>задача</em>.
+created-a-new-task-for=Создана новая <em>задача</em> для {0}.
+created-a-new-wiki-page=Создана новая <em>вики-страница</em>.
+created-a-new-wiki-page-in-the-x-wiki=Создана новая <em>вики-страница</em> в вики {0}.
+created-x-new-tasks=Создано {0} новых <em>задач</em>.
+created-x-new-wiki-pages=Создано {0} новых <em>вики-страниц</em>.
+created-x-new-wiki-pages-in-the-x-wiki=Создано {0} новых <em>вики-страниц</em> в вики {1}.
+due=До
+made-x-updates-to-a-blog-entry=Выполнено {0} обновлений в <em>записи блога</em>.
+made-x-updates-to-a-bookmark=Выполнено {0} обновлений в <em>закладках</em>.
+made-x-updates-to-a-calendar-event=Выполнено {0} обновлений в <em>событиях</em>.
+made-x-updates-to-a-document=Выполнено {0} обновлений в <em>документе</em>.
+made-x-updates-to-a-document-in-the-x-folder=Выполнено {0} обновлений в <em>документах</em> в папке {1}.
+made-x-updates-to-a-task=Выполнено {0} обновлений в <em>задаче</em>.
+made-x-updates-to-a-wiki-page=Выполнено {0} обновлений в <em>вики-странице</em>.
+made-x-updates-to-a-wiki-page-in-the-x-wiki=Выполнено {0} обновлений в <em>вики-странице</em> в вики {1}.
+never-due=Никогда
+open=Открыта
+removed-an-attachment-x-from-a-wiki-page=С <em>вики-страницы</em> удалено вложение {1}. 
+removed-an-attachment-x-from-a-wiki-page-in-the-x-wiki= С <em>вики-страницы</em> в вики {0} удалено вложение {1}.
+removed-x-attachments-from-a-wiki-page=С <em>вики-страницы</em> удалено {0} вложений.
+removed-x-attachments-from-a-wiki-page-in-the-x-wiki=С <em>вики-страницы</em> в вики {0} удалено {0} вложений.
+reopened=Переоткрыта
+reopened-a-task=Переоткрыл <em>задачу</em>.
+reopened-a-task-for=Переоткрыл <em>задачу</em> для {0}.
+reopened-x-tasks=Переоткрыл {0} <em>задач</em>.
+replied-to-x-forum-post=Ответил(а) на <em>сообщение форума</em> от {0}.
+replied-to-x-forum-post-in-x=Ответил(а) на <em>сообщение форума</em> от {0} в {1}.
+reposted-a-microblog-entry-from-x=Переслал <em>сообщение микроблога</em> от {0}.
+reposted-from=Переслал из
+resolved=Решено
+resolved-a-task=Решил(а) <em>задачу</em>.
+resolved-a-task-for=Решил(а) <em>задачу</em> от {0}.
+resolved-x-tasks=Решил(а) {0} <em>задач</em>.
+restored-an-attachment-x-to-a-wiki-page=Для <em>вики-страницы</em> восстановлено вложение {1}.
+restored-an-attachment-x-to-a-wiki-page-in-the-x-wiki=Для <em>вики-страницы</em> в вики {0} восстановлено вложение {1}.
+restored-x-attachments-from-a-wiki-page=Для <em>вики-страницы</em> восстановлено {0} вложений.
+restored-x-attachments-from-a-wiki-page-in-the-x-wiki=Для <em>вики-страницы</em> в вики {0} восстановлено {0} вложений.
+updated-a-blog-entry=Обновил(а) <em>запись блога</em>.
+updated-a-bookmark=Обновил(а) <em>закладку</em>.
+updated-a-calendar-event=Обновил(а) <em>событие</em>.
+updated-a-document=Обновил(а) <em>документ</em>.
+updated-a-document-in-the-x-folder=Обновил(а) <em>документ</em> в папке {0}.
+updated-a-task=Обновил(а) <em>задачу</em>.
+updated-a-task-for=Обновил(а) <em>задачу</em> для {0}.
+updated-a-wiki-page=Обновил(а) <em>вики-страницы</em>.
+updated-a-wiki-page-in-the-x-wiki=Обновил(а) <em>вики-страницу</em> в вики {0}.
+uploaded-a-new-document=Загрузил(а) новый <em>документ</em>.
+uploaded-a-new-document-in-the-x-folder=Загрузил(а) новый <em>документ</em> в папку {0}.
+uploaded-x-new-documents=Загрузил(а) {0} новых <em>документов</em>.
+view-changes=Посмотреть Изменения
+view-microblogs=Посмотреть Микроблоги
+wrote-a-new-blog-entry=Написал(а) новую <em>запись в блоге</em>.
+wrote-a-new-forum-post=Написал(а) новое <em>сообщение в форуме</em>.
+wrote-a-new-forum-post-in-x=Написал(а) новое <em>сообщение в форуме</em> в {0}.
+wrote-x-new-blog-entries=Написал(а) {0} новых <em>сообщений в блоге</em>.
+wrote-x-new-forum-posts=Написал(а) {0} новых <em>сообщений в форуме</em>.
+x-and-x-others={0} и {1} других.
+x-and-x-others-in-x={0} и {1} других в {2}.
+x-hours-ago={0} часов назад.
+x-minutes-ago={0} минут назад.
+x-replied-to-x-post={0} ответил на сообщение {1}.
+x-reposted-from-x={0} переслал от {1}.
+yesterday-at-x=Вчера в {0}.
